<resources>
    <string name="app_name">Beber Água</string>
    <string name="hint_peso">Seu Peso (Kg)</string>
    <string name="hint_idade">Sua Idade</string>
    <string name="hint_result">Resultado</string>
    <string name="text_button_calcular">Calcular Ingestão Diária</string>
    <string name="text_button_lembrete">Definir</string>
    <string name="text_button_alarme">Alarme</string>
    <string name="text_hora">00</string>
    <string name="text_dois_pontos">:</string>
    <string name="text_minuto">00</string>
    <string name="DialogTitulo">Redefinir Dados</string>
    <string name="DialogDesc">Desejar excluir todos os dados?</string>
    <string name="resume">Resumo</string>
    <string name="alert">Alerta</string>
    <string name="calc">Calcular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">id</string>


</resources>